[gd_scene load_steps=10 format=3 uid="uid://bgn763vrxmmcu"]

[ext_resource type="Script" uid="uid://r66mv5p80r5" path="res://scripts/tile_object.gd" id="1_2sjy5"]
[ext_resource type="Script" uid="uid://c56mrbf2es4ra" path="res://scripts/tile.gd" id="1_vhibn"]
[ext_resource type="Script" uid="uid://deq2syi6rrdmy" path="res://scenes/tile_modifier_controller.gd" id="3_r3gf4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vhibn"]
resource_local_to_scene = true
emission = Color(1, 1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rvdvl"]
resource_local_to_scene = true
resource_name = "piece_color"
render_priority = 1
emission = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r3gf4"]
resource_local_to_scene = true
emission = Color(1, 1, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_iixfe"]
margin = 0.06
size = Vector3(1, 0.163, 1)

[sub_resource type="BoxMesh" id="BoxMesh_iixfe"]
size = Vector3(0.95, 0.1, 0.95)

[sub_resource type="PlaneMesh" id="PlaneMesh_vhibn"]
size = Vector2(0.8, 0.8)

[node name="Tile" type="Node3D" groups=["Tile"]]
script = ExtResource("1_vhibn")

[node name="Tile_Object" type="AnimatableBody3D" parent="."]
script = ExtResource("1_2sjy5")
tile_material = SubResource("StandardMaterial3D_vhibn")
state_material = SubResource("StandardMaterial3D_rvdvl")
mouseover_material = SubResource("StandardMaterial3D_r3gf4")

[node name="Collision" type="CollisionShape3D" parent="Tile_Object"]
shape = SubResource("BoxShape3D_iixfe")

[node name="Tile_Mesh" type="MeshInstance3D" parent="Tile_Object"]
mesh = SubResource("BoxMesh_iixfe")
skeleton = NodePath("")

[node name="Tile_Modifiers" type="Node3D" parent="Tile_Object"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.07, 0)
visible = false
script = ExtResource("3_r3gf4")

[node name="Modifier" type="MeshInstance3D" parent="Tile_Object/Tile_Modifiers"]
visible = false
mesh = SubResource("PlaneMesh_vhibn")
skeleton = NodePath("../..")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="input_event" from="Tile_Object" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Tile_Object" to="Tile_Object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Tile_Object" to="Tile_Object" method="_on_mouse_exited"]
[connection signal="ready" from="Tile_Object" to="Tile_Object" method="_on_ready"]
[connection signal="ready" from="Tile_Object/Tile_Modifiers" to="Tile_Object/Tile_Modifiers" method="_on_ready"]
